src/test/ui/for/for-c-in-str.stderr
error[E0277]: `&str` cannot be converted to an iterator
  --> $DIR/for-c-in-str.rs:4:14
   |
LL |     for c in "asdf" {
   |              ^^^^^^ cannot implicitly convert `&str` to an iterator; try calling `.chars()` or `.bytes()`
   |
   = help: the trait `IntoIterator` is not implemented for `&str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
